--- a/src/pages/kiosk-betreiber/christoph-stanger.astro
+++ b/src/pages/kiosk-betreiber/christoph-stanger.astro
@@ -44,7 +44,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							</div>
 							<h1 class="mb-6 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Christoph Stanger</h1>
 							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">
-								Software Entwickler bei Googler im Cloud Run Team und begeisterter Vortragender auf Koferenzen und Universitäten. <br />
+								Software Entwickler bei Google im Cloud Run Team und begeisterter Vortragender auf Koferenzen und Universitäten. <br />
 							</p>
 							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">Ehrenamtlicher Jugendleiter beim Alpenverein und leidenschaftlicher Bergsteiger. Liebt es mit dem Camper unterwegs zu sein.</p>
 						</div>
