--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -61,12 +61,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 						<HostPreview
 							avatar="tim-hannemann-headshot"
 							name="Tim Hannemann"
-							subtitle="Subtitle TODO"
-							description='Description TODO'
-							github="timhannemann"
-							twitter="timquitesocial"
+							subtitle="Timwork"
+							description='Teamplayer mit ausgeprägtem Verantwortungsbewusstsein, Rosinen hin oder her, Kaiserschmarrn auf jeden Fall mit Apfelmus'
 							linkedin="timhannemann"
-							website=""
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/tim-hannemann/"
