--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -273,12 +273,9 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 						<HostPreview
 							avatar="tim-hannemann-headshot"
 							name="Tim Hannemann"
-							subtitle="Subtitle TODO"
-							description='Description TODO'
-							github="timhannemann"
-							twitter="timquitesocial"
+							subtitle="Timwork"
+							description='Teamplayer mit ausgeprägtem Verantwortungsbewusstsein, Rosinen hin oder her, Kaiserschmarrn auf jeden Fall mit Apfelmus'
 							linkedin="timhannemann"
-							website=""
 							podcastHost={false}
 							meetupHost={true}
 							profileLink="/kiosk-betreiber/tim-hannemann/"
