kaiserschmarrn link changed as pepsch is no longer allowed

--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -44,7 +44,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 							avatar="wolfgang-gassler-headshot"
 							name="Wolfgang Gassler"
 							subtitle="Der aus den Bergen"
-							description='Informatiker (früher auch Wissenschaft), Pragmatiker, Sideproject-Domain-Käufer, Feuerwehrmann, Kaiserschmarrn <a href="https://www.youtube.com/shorts/rLAvwrMqfTk">nur mit Rosinen</a>'
+							description='Informatiker (früher auch Wissenschaft), Pragmatiker, Sideproject-Domain-Käufer, Feuerwehrmann, Kaiserschmarrn <a href="https://www.youtube.com/shorts/aUbRM9kTTKI">nur mit Rosinen</a>'
 							github="woolfg"
 							twitter="schafele"
 							linkedin="wolfganggassler"
