--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -256,7 +256,7 @@ bestPerformingEpisodes = bestPerformingEpisodes.slice(0, 6);
 							avatar="wolfgang-gassler-headshot"
 							name="Wolfgang Gassler"
 							subtitle="Der aus den Bergen"
-							description='Informatiker (früher auch Wissenschaft), Pragmatiker, Sideproject-Domain-Käufer, Feuerwehrmann, Kaiserschmarrn <a href="https://www.youtube.com/shorts/rLAvwrMqfTk">nur mit Rosinen</a>'
+							description='Informatiker (früher auch Wissenschaft), Pragmatiker, Sideproject-Domain-Käufer, Feuerwehrmann, Kaiserschmarrn <a href="https://www.youtube.com/shorts/aUbRM9kTTKI">nur mit Rosinen</a>'
 							github="woolfg"
 							twitter="schafele"
 							linkedin="wolfganggassler"
