--- a/src/pages/meetup/alps/archive/index.astro
+++ b/src/pages/meetup/alps/archive/index.astro
@@ -16,7 +16,7 @@ let description = 'Tech Meetup in Innsbruck, brings together tech enthusiasts, e
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
 const meetupArchive = getPastMeetups()
-const alpsImage = (await import('../../../../images/meetup-alps/ibk.jpg')).default;
+const alpsImage = (await import('../../../../images/meetup-alps/slider/ibk.jpg')).default;
 
 ---
 
