--- a/src/pages/meetup/alps/promote/announce-newsletter.astro
+++ b/src/pages/meetup/alps/promote/announce-newsletter.astro
@@ -45,7 +45,7 @@ const locationAddress = nextMeetup.location.address
 		&#128221; Reserve Your Spot and receive an instant calendar invite: <a href="https://engineeringkiosk.dev/alps">https://engineeringkiosk.dev/alps</a><br/>
 		<br/>
 		cheers,<br/>
-		Wolfgang, Tim, Romedius, Christoph<br/>
+		Wolfgang, Tim, Romedius, Christoph and Mirjam<br/>
 		</p>
 	</body>
 </html>
