--- a/src/pages/podcast/index.astro
+++ b/src/pages/podcast/index.astro
@@ -18,7 +18,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 		<div>
 			<Nav title={title} />
 
-			<PodcastEpisodeListing numberOfItems="0" showAllButton={false} descriptionChars={300} headline='Alle Podcast Episoden vom Engineering Kiosk' />
+			<PodcastEpisodeListing numberOfItems="0" showAllButton={false} descriptionChars={300} headline='Alle Podcast Episoden vom Engineering Kiosk' sectionID="alle-podcast-episoden" />
 
 			<Footer />
 		</div>
