tailwind: Replace class tracking-tighter with tracking-tight
Primarily to match new tailwind v4 theme

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -104,7 +104,7 @@ const year = new Date().getFullYear();
 						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Werbung im Engineering Kiosk Podcast" href="/podcast-werbung/"> <span class="w-6 mr-2">📢</span> Werbung im Engineering Kiosk Podcast</a>
 					</li>	
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Aktuelle Werbepartner" href="/partner/"> Aktuelle Werbepartner</a>
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Aktuelle Werbepartner" href="/podcast/partners/"> Aktuelle Werbepartner</a>
 					</li>					
 					<li>
 						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk Impressum" href="/impressum/"> Impressum</a>
