--- a/src/components/MeetupListing.astro
+++ b/src/components/MeetupListing.astro
@@ -24,7 +24,7 @@ const { headline, meetupsToShow, archive } = Astro.props
 				<div class="container px-4 mx-auto" id={`meetup-${formatDateWithoutWeekday(meetup.date, 'en-GB').toLowerCase().replace(/[^a-z0-9-]/g, '-')}`}>
 					<div class="mb-16 text-center">
 						<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">{headline}</span>
-						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">
+						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">
 							{formatDateWithoutWeekday(meetup.date, 'en-GB')} @{' '}
 							<div class="inline-block h-14">
 								<CompanyLogo name={meetup.location.name} logo={meetup.location.logo} url={meetup.location.url} logoHeight="56" />
