--- a/src/components/SoftwareEngineeringGamePreview.astro
+++ b/src/components/SoftwareEngineeringGamePreview.astro
@@ -34,7 +34,7 @@ const nameId = URLify(game.data.name);
 					))
 				}
 
-				<h2 class="mb-8 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">
+				<h2 class="mb-8 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">
 					<a href={game.data.website} class="hover:underline hover:text-yellow-500" title={`Website von ${game.data.name}`}>
 						{game.data.name}
 					</a>
