--- a/src/components/TechPodcastPreview.astro
+++ b/src/components/TechPodcastPreview.astro
@@ -104,7 +104,7 @@ const nameId = URLify(podcast.data.name);
 					))
 				}
 
-				<h2 class="mb-8 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">
+				<h2 class="mb-8 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">
 					<a href={podcast.data.website} class="hover:underline hover:text-yellow-500" title={`Website von ${podcast.data.name}`}>
 						{podcast.data.name}
 					</a>
