--- a/src/layouts/blog-post.astro
+++ b/src/layouts/blog-post.astro
@@ -50,7 +50,7 @@ let tags = content.tags.map((element) => URLify(element));
 								<time class="date" datetime={content.pubDate}>{formatDate(content.pubDate)}</time>
 							</p>
 						</div>
-						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">
+						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">
 							{content.title}
 						</h1>
 						<p class="mb-10 text-lg md:text-xl font-medium text-coolGray-500">
