--- a/src/layouts/podcast-episode.astro
+++ b/src/layouts/podcast-episode.astro
@@ -188,7 +188,7 @@ const html = (await Astro.slots.render('default'))
 										<time class="date" datetime={frontmatter.pubDate}>{formatDate(frontmatter.pubDate)}</time>
 									</p>
 								</div>
-								<h1 class="mb-8 text-3xl md:text-4xl lg:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">
+								<h1 class="mb-8 text-3xl md:text-4xl lg:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">
 									{frontmatter.title}
 								</h1>
 								<div id="episode-player">
