--- a/src/pages/kiosk-betreiber/wolfgang-gassler.astro
+++ b/src/pages/kiosk-betreiber/wolfgang-gassler.astro
@@ -47,7 +47,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 									<img src="/images/elements/icon-website.svg" height="33" width="33" alt="Website von Wolfgang Gassler" />
 								</a>
 							</div>
-							<h1 class="mb-6 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Wolfgang Gassler</h1>
+							<h1 class="mb-6 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Wolfgang Gassler</h1>
 							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">
 								<a href="https://gassler.org/consulting" class="underline hover:no-underline">Freelancer und Consultant</a> mit Interesse an Menschen, Tech &amp; Team-Kultur, Datenbank und Skalierung, Produkt Entwicklung und Usability sowie Recommender Systeme. Ehemals Engineering Manager bei <a
 									href="https://company.trivago.com/"
