--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -23,7 +23,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 					<div class="flex flex-wrap mb-24 lg:mb-18 justify-between items-center">
 						<div class="w-full mb-10 lg:mb-0">
 							<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl"> Kontakt</span>
-							<h1 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tighter leading-tight">Meld dich doch mal ...</h1>
+							<h1 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tight leading-tight">Meld dich doch mal ...</h1>
 							<p class="text-lg md:text-xl text-coolGray-500 font-medium">
 								Lass uns doch einfach mal sprechen. Egal, ob du einfach nur mal Hallo sagen möchtest, einen Themenwunsch hast, uns etwas Feedback zukommen lassen willst, uns gehörig korrigieren möchtest, weil wir mal wieder Blödsinn besprochen haben oder wirklich eine seriöse Anfrage hast. Wir
 								freuen uns über deine Nachricht!
