--- a/src/pages/meetup/alps/archive/index.astro
+++ b/src/pages/meetup/alps/archive/index.astro
@@ -59,7 +59,7 @@ const alpsImage = (await import('../../../../images/meetup-alps/slider/ibk.jpg')
 			<div class="container px-4 mx-auto">
 				<div class="mb-8 text-center">
 					<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">Meetup Overview</span>
-					<h2 class="mb-4 text-3xl md:text-4xl leading-tight text-coolGray-900 font-bold tracking-tighter">Past Meetups at a Glance</h2>
+					<h2 class="mb-4 text-3xl md:text-4xl leading-tight text-coolGray-900 font-bold tracking-tight">Past Meetups at a Glance</h2>
 					<p class="mb-10 text-lg md:text-xl text-coolGray-500 font-medium">A quick overview of our past meetups.</p>
 				</div>
 
