--- a/src/pages/meetup/alps/index.astro
+++ b/src/pages/meetup/alps/index.astro
@@ -146,7 +146,7 @@ const sliderImages = await Promise.all(
 						<div class="container px-4 mx-auto w-full md:w-1/2">
 							<div class="mb-16 text-center">
 								<a name="register"></a>
-								<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Please, let us know that you are coming</h3>
+								<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight	">Please, let us know that you are coming</h3>
 								<div class="leading-relaxed">
 									Please, for better planning and organization, let us know that you are coming. <br />
 									It is free and you can cancel your registration at any time.<br />
@@ -213,7 +213,7 @@ const sliderImages = await Promise.all(
 							<div class="container px-4 mx-auto w-full md:w-1/2">
 								<div class="mb-16 text-center">
 									<a name="register"></a>
-									<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Registration is closed</h3>
+									<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Registration is closed</h3>
 									<div class="leading-relaxed">
 										We have reached the maximum number of registrations for the event on {dateString}.<br />
 										Please do not show up if you have not registered beforehand as the venue has limited capacity due to safety regulations.<br />
