--- a/src/pages/podcast/partners.astro
+++ b/src/pages/podcast/partners.astro
@@ -24,7 +24,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 				<div class="container px-4 mx-auto">
 					<div class="flex flex-wrap mb-8 lg:mb-4 justify-between items-center">
 						<div class="w-full">
-							<h2 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tighter leading-tight">Unsere aktuellen Werbepartner</h2>
+							<h2 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tight leading-tight">Unsere aktuellen Werbepartner</h2>
 						</div>			
 					</div>
 				</div>
