--- a/src/components/BlogPostListing.astro
+++ b/src/components/BlogPostListing.astro
@@ -28,8 +28,8 @@ if (numberOfItems > 0) {
 		<div class="flex flex-wrap items-center mb-16">
 			<div class="w-full md:w-3/4 mb-8 md:mb-0">
 				<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-full shadow-sm"> Blog</span>
-				{showAllButton && <h2 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">Die aktuellsten Blog posts</h2>}
-				{!showAllButton && <h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">Die aktuellsten Blog posts</h1>}
+				{showAllButton && <h2 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">Die aktuellsten Blog posts</h2>}
+				{!showAllButton && <h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">Die aktuellsten Blog posts</h1>}
 				<p class="text-lg md:text-xl text-coolGray-500 font-medium">Die Tonspur ist nicht alles. Das geschriebene Wort ist mindestens genauso wertvoll, wenn nicht sogar noch wertvoller. Schau dir an, was wir zu "Papier" gebracht haben.</p>
 			</div>
 			{
