--- a/src/components/PodcastEpisodeListing.astro
+++ b/src/components/PodcastEpisodeListing.astro
@@ -69,8 +69,8 @@ if (episodes) {
 		<div class="flex flex-wrap items-center mb-12">
 			<div class="w-full md:w-3/4 mb-8 md:mb-0">
 				<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-full shadow-sm"> Podcast</span>
-				{mainPage && <h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">{headline}</h1>}
-				{!mainPage && <h2 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">{headline}</h2>}
+				{mainPage && <h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">{headline}</h1>}
+				{!mainPage && <h2 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">{headline}</h2>}
 				<p class="text-lg md:text-xl text-coolGray-500 font-medium">{listingDescription}</p>
 			</div>
 			{
