--- a/src/components/meetup-alps/Team.astro
+++ b/src/components/meetup-alps/Team.astro
@@ -8,7 +8,7 @@ import Organizer from '../Organizer.astro'
 	<div class="container px-4 mx-auto">
 		<div class="mb-16 text-center">
 			<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">The local team in Innsbruck</span>
-			<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Team Engineering Kiosk Alps</h1>
+			<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Team Engineering Kiosk Alps</h1>
 			<p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">The organizers of Engineering Kiosk Alps Innsbruck. <br />Feel free to drop us a message.</p>
 			<a href="mailto:alps@engineeringkiosk.dev" class="text-lg md:text-xl text-yellow-500 font-medium">alps@engineeringkiosk.dev</a>
 		</div>
