--- a/src/pages/deutsche-tech-podcasts/[tag]-podcasts.astro
+++ b/src/pages/deutsche-tech-podcasts/[tag]-podcasts.astro
@@ -84,7 +84,7 @@ podcasts = podcasts.sort(orderByName);
 					<div class="flex flex-wrap items-center mb-12">
 						<div class="w-full md:w-3/4 mb-8 md:mb-0">
 							<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-full shadow-sm">Kuratierte Podcast Liste</span>
-							<h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">
+							<h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">
 								{customTitle || `Die besten ${tagHumanName}-Podcasts`}
 							</h1>
 							{tagDescription_long && <p class="text-lg md:text-xl text-coolGray-500 font-medium">{tagDescription_long}</p>}
