--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -23,7 +23,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 						<div class="w-full px-4 mb-10">
 							<div class="flex flex-wrap justify-between items-center">
 								<div class="w-full md:w-1/2 mb-10 md:mb-0">
-									<h1 class="mb-4 text-3xl md:text-4xl text-coolGray-900 font-bold tracking-tighter">Impressum</h1>
+									<h1 class="mb-4 text-3xl md:text-4xl text-coolGray-900 font-bold tracking-tight">Impressum</h1>
 								</div>
 							</div>
 						</div>
