--- a/src/pages/kiosk-betreiber/andy-grunwald.astro
+++ b/src/pages/kiosk-betreiber/andy-grunwald.astro
@@ -40,7 +40,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 									<img src="/images/elements/icon-website.svg" height="33" width="33" alt="Website von Andy Grunwald" />
 								</a>
 							</div>
-							<h1 class="mb-6 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Andy Grunwald</h1>
+							<h1 class="mb-6 text-4xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Andy Grunwald</h1>
 							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">
 								Engineering Manager im Bereich <i>Site Reliability Engineering</i> und Software Engineer mit einem Fokus auf Backend-Systeme, Infrastruktur und Engineering Kultur. Zieht seine Motivation aus der Team-Arbeit mit Menschen, die motiviert sind und etwas nach vorne bringen wollen (<i
 									>Do awesome things with awesome people</i
