--- a/src/pages/kiosk-betreiber/index.astro
+++ b/src/pages/kiosk-betreiber/index.astro
@@ -23,7 +23,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 				<div class="container px-4 mx-auto">
 					<div class="mb-16 text-center">
 						<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">Team</span>
-						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Die Gesichter hinter'm Engineering Kiosk.</h1>
+						<h1 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Die Gesichter hinter'm Engineering Kiosk.</h1>
 						<p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Wer macht's? Wer brabbelt da die ganze Zeit? Wer hält den Kiosk am Laufem?</p>
 					</div>
 
