--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -70,7 +70,7 @@ const latestEpisodes = [
 
 			<section id="alle-episoden" class="py-20 md:py-28 bg-coolGray-900 overflow-hidden" style="background-image: url('/images/elements/pattern-dark2.svg'); background-position: center;">
 				<div class="container px-4 mx-auto flex flex-col items-center">
-					<h3 class="mb-8 font-bold leading-tight text-white text-4xl md:text-5xl tracking-tighter">Lust auf mehr?</h3>
+					<h3 class="mb-8 font-bold leading-tight text-white text-4xl md:text-5xl tracking-tight">Lust auf mehr?</h3>
 					<a class="inline-block py-4 px-5 mt-2 text-yellow-50 font-medium text-center bg-yellow-500 hover:bg-yellow-600 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 rounded-md shadow-sm" href="/podcast/">
 						Alle Podcast Episoden anzeigen
 					</a>
@@ -81,7 +81,7 @@ const latestEpisodes = [
 
 			<section id="kaffee-support" class="py-20 md:py-28 bg-coolGray-900 overflow-hidden" style="background-image: url('/images/elements/pattern-dark2.svg'); background-position: center;">
 				<div class="container px-4 mx-auto flex flex-col items-center">
-					<h3 class="mb-8 font-bold leading-tight text-white text-4xl md:text-5xl tracking-tighter">Supporte uns mit einem Kaffee ...</h3>
+					<h3 class="mb-8 font-bold leading-tight text-white text-4xl md:text-5xl tracking-tight">Supporte uns mit einem Kaffee ...</h3>
 					<a class="inline-block py-4 px-5 mt-2 text-yellow-50 font-medium text-center bg-yellow-500 hover:bg-yellow-600 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 rounded-md shadow-sm" href="https://buymeacoffee.com/engineeringkiosk">
 						Buy Me A Coffee ☕
 					</a>
