--- a/src/pages/newsletter.astro
+++ b/src/pages/newsletter.astro
@@ -23,7 +23,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 					<div class="flex flex-wrap mb-12 lg:mb-9 justify-between items-center">
 						<div class="w-full mb-10 lg:mb-0">
 							<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl"> Newsletter</span>
-							<h1 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tighter leading-tight">Wenn du mehr von uns möchtest ...</h1>
+							<h1 class="mb-4 text-4xl md:text-5xl text-darkCoolGray-900 font-bold tracking-tight leading-tight">Wenn du mehr von uns möchtest ...</h1>
 							<p class="text-lg md:text-xl text-coolGray-500 font-medium">
 								Immer mal wieder erreichen uns Nachrichten, dass wir doch bitte mehr von uns geben sollen. Und das tun wir jetzt!
 							</p>
