--- a/src/pages/spiele-fuer-softwareentwickler/index.astro
+++ b/src/pages/spiele-fuer-softwareentwickler/index.astro
@@ -39,7 +39,7 @@ awesomeSoftwareEngineeringGames.sort(orderByName);
 					<div class="flex flex-wrap items-center mb-8">
 						<div class="w-full md:w-3/4 mb-8 md:mb-0">
 							<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-full shadow-sm">Kuratierte Spiele für Softwareentwickler:innen</span>
-							<h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tighter">Spiele für Softwareentwickler:innen</h1>
+							<h1 class="mb-4 text-4xl md:text-5xl leading-tight text-darkCoolGray-900 font-bold tracking-tight">Spiele für Softwareentwickler:innen</h1>
 							<p class="text-lg md:text-xl text-coolGray-500 font-medium">
 								Ein ordentlicher Kiosk verfügt natürlich über ein ausgewogenes Angebot. Ein Zeitschriften-Kiosk bietet eine Auswahl an Zeitschriften, der Engineering Kiosk hingegen ist ein Podcast und <a href="/deutsche-tech-podcasts/" class="text-yellow-500">andere Tech-Podcasts haben wir schon</a>. Daher diversifizieren wir: Wir haben eine <span class="font-bold">kuratierte Liste von
 									<span id="number-games">{awesomeSoftwareEngineeringGames.length}</span> Spiele für Softwareentwickler:innen</span> für euch zusammengestellt.
@@ -69,7 +69,7 @@ awesomeSoftwareEngineeringGames.sort(orderByName);
 			<section class="py-24 bg-coolGray-50" style="background-image: url('/images/elements/pattern-light-big.svg'); background-position: center;">
 				<div class="container px-4 mx-auto">
 					<div class="mb-16 text-center">
-						<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tighter">Dein Lieblingsspiel fehlt?</h3>
+						<h3 class="mb-4 text-3xl md:text-5xl leading-tight text-coolGray-900 font-bold tracking-tight">Dein Lieblingsspiel fehlt?</h3>
 						<a
 							class="flex items-center justify-center py-2 px-4 m-auto text-sm leading-5 text-yellow-50 font-medium bg-yellow-500 hover:bg-yellow-600 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 md:max-w-max rounded-md"
 							href="https://github.com/EngineeringKiosk/awesome-software-engineering-games/blob/main/CONTRIBUTING.md"
