Replace SCSS files with CSS files to support custom styling of Blog post and podcast episode layouts
We do not need SCSS here.
Those are not much instructions at all.
To support SCSS instructions, we would need some form of CSS pre or post processing.
Another dependency, we do not need.

--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -11,7 +11,7 @@ import { Markdown } from 'astro-remote';
 import { URLify } from '../scripts/urlify.js';
 import { formatDate } from '../scripts/date.js';
 
-import '../styles/blogpost-preview.scss';
+import '../styles/blogpost-preview.css';
 
 const { post, n } = Astro.props;
 const { data } = post;
