--- a/src/layouts/blog-post.astro
+++ b/src/layouts/blog-post.astro
@@ -8,7 +8,7 @@ import Footer from '../components/Footer.astro';
 import { URLify } from '../scripts/urlify.js';
 import { formatDate } from '../scripts/date.js';
 
-import '../styles/blogpost.scss';
+import '../styles/blogpost.css';
 
 const { post } = Astro.props;
 const content = post.data;
