--- a/src/layouts/podcast-episode.astro
+++ b/src/layouts/podcast-episode.astro
@@ -12,7 +12,7 @@ import { URLify } from '../scripts/urlify.js';
 import { formatDate, humanTimestampToSecondsTo } from '../scripts/date.js';
 
 import podcastInfo from '../data/podcast-info.json';
-import '../styles/podcast_episode.scss';
+import '../styles/podcast_episode.css';
 
 const { episode } = Astro.props;
 const frontmatter = episode.data;
