--- a/src/components/PodcastEpisodeBlogpostAd.astro
+++ b/src/components/PodcastEpisodeBlogpostAd.astro
@@ -21,11 +21,11 @@ const description = cutText(data.description, 200);
 ---
 
 <div class="container px-4 mx-auto my-10">
-	<div class="flex flex-wrap lg:items-center -mx-4 rounded-3xl">
+	<div class="flex flex-wrap lg:items-center -mx-4">
 		<div class="w-full md:w-1/3">
 			<div class="relative mx-auto md:ml-0 max-w-max">
 				<a class="block mb-6 overflow-hidden" href={`/podcast/episode/${content.slug}/`}>
-					<Image class="rounded-3xl" src={data.image} title={`Podcast episode ${data.title}`} alt={`Podcast episode ${data.title}`} />
+					<Image class="rounded-2xl" src={data.image} title={`Podcast episode ${data.title}`} alt={`Podcast episode ${data.title}`} />
 				</a>
 			</div>
 		</div>
