--- a/src/pages/podcast-werbung.astro
+++ b/src/pages/podcast-werbung.astro
@@ -116,7 +116,7 @@ Mit der gezielten Ansprache in Host-Read Botschaften und der hohen Glaubwürdigk
 											</div>
 										</div>
 										<div class="w-full md:w-4/5 px-4">
-											<span class="inline-block py-px px-2 mb-4 mr-3 text-xs leading-5 text-yellow-900 bg-yellow-100 font-medium uppercase rounded-full shadow-sm">
+											<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">
 												Episode 86
 											</span>
 											<h1 class="mb-8 text-3xl md:text-4xl leading-tight text-darkCoolGray900 font-bold tracking-tight">
@@ -137,7 +137,7 @@ Mit der gezielten Ansprache in Host-Read Botschaften und der hohen Glaubwürdigk
 											</div>
 										</div>
 										<div class="w-full md:w-4/5 px-4">
-											<span class="inline-block py-px px-2 mb-4 mr-3 text-xs leading-5 text-yellow-900 bg-yellow-100 font-medium uppercase rounded-full shadow-sm">
+											<span class="inline-block py-px px-2 mb-4 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium uppercase rounded-9xl">
 												Episode 85
 											</span>
 											<h1 class="mb-8 text-3xl md:text-4xl leading-tight text-darkCoolGray900 font-bold tracking-tight">
