--- a/src/components/meetup-alps/Newsletter.astro
+++ b/src/components/meetup-alps/Newsletter.astro
@@ -52,7 +52,7 @@ let dates = getNextMeetups().map((meetup) => meetup.date);
         <div class="mt-4">
           <p class="hidden text-lg mt-8" id="newsletterFormMessage"></p>
           <input name="email" value="" placeholder="Your Email here" type="email" class="email-field" />
-          <input class="m-2 px-3 h-12 text-coolGray-900 outline-none placeholder-coolGray-500 border border-coolGray-200 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 rounded-lg shadow-xsm" name="regId" placeholder="Your email address" />
+          <input class="bg-white m-2 px-3 h-12 text-coolGray-900 outline-none placeholder-coolGray-500 border border-coolGray-200 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 rounded-lg shadow-xs" name="regId" placeholder="Your email address" />
           <input type="submit" class="py-4 m-2 px-5 leading-4 cursor-pointer text-yellow-50 font-medium text-center bg-yellow-500 hover:bg-yellow-600 focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50 rounded-md shadow-sm" value="Subscribe" />
         </div>
       </form>
