--- a/src/components/PodcastEpisodeTranscriptLine.astro
+++ b/src/components/PodcastEpisodeTranscriptLine.astro
@@ -15,8 +15,7 @@ const endTime = millisecondsToHumanTimestamp(utterance.end);
 const startInSeconds = Math.floor(utterance.start / 1000);
 ---
 <div data-trans-start={startInSeconds} class="utterance">
-	<h4>{!hideSpeakerName && utterance.speaker}
-		<span class="time">({startTime} - {endTime})</span>
+	<h4>{!hideSpeakerName && (<span class="speaker">{utterance.speaker}</span> )}<span class="time">({startTime} - {endTime})</span>
 		<a href=`#t=${startInSeconds}` onclick=`showSharingLink(${startInSeconds}, event)` title="Diese Transkriptstelle teilen">
 			<img src="/images/elements/share-arrow.svg" alt="Teilen"/>
 		</a>
