--- a/src/pages/meetup/alps/index.astro
+++ b/src/pages/meetup/alps/index.astro
@@ -9,7 +9,7 @@ import Discord from '../../../components/meetup-alps/Discord.astro';
 import Team from '../../../components/meetup-alps/Team.astro';
 import { Image } from "astro:assets";
 
-import { formatDateWithoutWeekday, formatTime, formatDateCustom } from '../../../scripts/date.js';
+import { formatDateWithoutWeekday, formatTime } from '../../../scripts/date.js';
 import { getNextMeetup } from '../../../scripts/meetups.js';
 import Sponsors from '../../../components/meetup-alps/Sponsors.astro';
 import ImageSlider from '../../../components/meetup-alps/ImageSlider.astro';
