Meetup Rhine Ruhr: Add Organizers

--- a/src/components/meetup-rhine-ruhr/Team.astro
+++ b/src/components/meetup-rhine-ruhr/Team.astro
@@ -14,9 +14,9 @@ import Organizer from '../Organizer.astro'
 		</div>
 
 		<div class="flex flex-wrap justify-center -mx-4 ">
-			<Organizer avatar="andy-grunwald-headshot" name="Andy Grunwald" subtitle="Organizer" description="" github="andygrunwald" twitter="andygrunwald" linkedin="andy-grunwald" website="https://andygrunwald.com/" />
-			<Organizer avatar="tim-hannemann-headshot" name="Schepp" subtitle="Organizer" description="" github="schepp" twitter="" linkedin="christian-schaefer-a696041a" website="https://schepp.dev/" />
-			<Organizer avatar="romedius-weiss-headshot" name="Dario Tilgner" subtitle="Organizer" description="" github="" twitter="" linkedin="dariotilgner" website="" />
+			<Organizer avatar="andy-grunwald-headshot.jpg" name="Andy Grunwald" subtitle="Organizer" description="" github="andygrunwald" twitter="andygrunwald" linkedin="andy-grunwald" website="https://andygrunwald.com/" />
+			<Organizer avatar="schepp-headshot.png" name="Schepp" subtitle="Organizer" description="" github="schepp" twitter="" linkedin="christian-schaefer-a696041a" website="https://schepp.dev/" />
+			<Organizer avatar="dario-tilgner-headshot.png" name="Dario Tilgner" subtitle="Organizer" description="" github="" twitter="" linkedin="dariotilgner" website="" />
 		</div>
 	</div>
 </section>
