--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -26,7 +26,7 @@ const year = new Date().getFullYear();
 						</a>
 					</li>
 					<li class="mb-4">
-						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk Meetups" href="/meetup/alps/">
+						<a class="inline-block text-coolGray-500 hover:text-coolGray-600 font-medium" title="Engineering Kiosk Meetups" href="/meetup/">
 							<span class="w-6 mr-2">👥</span> Meetup
 						</a>
 					</li>
