--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -54,7 +54,7 @@ let latestEpisode = episodesToShow[0];
 							<a class="text-coolGray-500 hover:text-coolGray-900 font-medium" href="/podcast/" title="Engineering Kiosk Podcast Episoden"> 🎙️ Podcast</a>
 						</li>
 						<li class="mr-12">
-							<a class="text-coolGray-500 hover:text-coolGray-900 font-medium" href="/meetup/alps/" title="Engineering Kiosk Meetups"> Meetup</a>
+							<a class="text-coolGray-500 hover:text-coolGray-900 font-medium" href="/meetup/" title="Engineering Kiosk Meetups"> Meetup</a>
 						</li>
 						<li class="mr-12">
 							<a class="text-coolGray-500 hover:text-coolGray-900 font-medium" href="/join-discord/" title="Engineering Kiosk Discord Community">
@@ -117,7 +117,7 @@ let latestEpisode = episodesToShow[0];
 								<a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" title="Engineering Kiosk Podcast Episoden" href="/podcast/"> 🎙️ Podcast</a>
 							</li>
 							<li>
-								<a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="/meetup/alps/" title="Engineering Kiosk Meetups"> Meetup</a>
+								<a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" href="/meetup/" title="Engineering Kiosk Meetups"> Meetup</a>
 							</li>
 							<li>
 								<a class="block py-3 px-4 text-coolGray-500 hover:text-coolGray-900 font-medium hover:bg-coolGray-50 rounded-md" title="Engineering Kiosk Discord Community" href="/join-discord/">
