--- a/src/components/meetup/MeetupListing.astro
+++ b/src/components/meetup/MeetupListing.astro
@@ -31,7 +31,7 @@ const { headline, meetupsToShow, archive, meetupName = 'Alps' } = Astro.props
 								<CompanyLogo name={meetup.location.name} logo={meetup.location.logo} url={meetup.location.url} logoHeight="56" />
 							</div>
 						</h1>
-						{!archive && <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Join the next meetup and listen to the following talks.</p>}
+						{!archive && <p class="mb-8 text-lg md:text-xl text-coolGray-500 font-medium">Join the next meetup and listen to the following talks.{meetupName === 'Alps' ? ' All talks and the meetup are in English.' : ''}</p>}
 					</div>
 
 					<div class="flex flex-wrap justify-center -mx-4">
