--- a/src/components/meetup/Talk.astro
+++ b/src/components/meetup/Talk.astro
@@ -44,11 +44,11 @@ const linkedInArray = linkedin ? Array.isArray(linkedin) ? linkedin : [linkedin]
 		<span class="inline-block mb-2 text-lg font-medium text-yellow-500">
 			{name}
 		</span>
-		<div class="mb-6">
+		{language && <div class="mb-6">
 			<span class="inline-block py-px px-2 text-xs leading-5 text-yellow-500 bg-yellow-100 font-medium rounded-full">
 				{language === 'de' ? 'Vortrag in Deutsch' : 'Talk in English'}
 			</span>
-		</div>
+		</div>}
 		<div class="text-left mt-6">
 			<h4 class="mb-2 text-sm font-semibold uppercase tracking-wide text-coolGray-900">About the Talk</h4>
 			<p class="mb-8 text-coolGray-500 font-medium description" set:html={htmlDescription} />
