Meetup Rhine-Ruhr: Add future Meetups

--- a/src/pages/meetup/rhine-ruhr/index.astro
+++ b/src/pages/meetup/rhine-ruhr/index.astro
@@ -229,9 +229,9 @@ const sliderImages = await Promise.all(
 					)
 				}
 			}}
-			<!-- 
+			
+			<!-- TODO: Integrate newsletter form -->
 			<Newsletter />
-			-->
 
 			<Discord meetupName="Rhine-Ruhr" />
 
