--- a/src/pages/kiosk-betreiber/wolfgang-gassler.astro
+++ b/src/pages/kiosk-betreiber/wolfgang-gassler.astro
@@ -91,7 +91,7 @@ const jsonLd = {
 								> und auch viele Jahre in Lehre &amp; Forschung in der <a href="https://dbis-informatik.uibk.ac.at/" class="underline hover:no-underline">Forschungsgruppe Datenbanken und Informationssysteme an der Universität Innsbruck (Österreich)</a>. Gerne unterwegs (auch weit weg von den Bergen
 								🌊 ). Ursprünglich aus Innsbruck (ganz nah an den Bergen ⛰️ ).
 							</p>
-							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">Freiwilliger Feuerwehrmann und leidenschaftlicher Kletterer. Verbringt einen Großteil seiner Freizeit in der Natur und in Zügen, um die Welt zu sehen. Legt sehr viel Wert auf geselliges Essen.</p>
+							<p class="mb-6 text-lg md:text-xl text-coolGray-500 font-medium">Freiwilliger Feuerwehrmann und leidenschaftlicher Kletterer. Verbringt einen Großteil seiner Freizeit in der Natur und in Zügen, um die Welt zu sehen.</p>
 							<p class="text-lg md:text-xl text-coolGray-500 font-medium">
 								Neben dem <a href="/">Engineering Kiosk</a> betreibt Wolfgang mit Freunden als Side Project <a href="https://www.f-online.app/" class="underline hover:no-underline">F-Online.at</a>, die größte E-Learning Plattform für die österreichische Führerscheinprüfung.
 							</p>
